manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-app
  namespace: exercise-ns
  labels:
    app: exercise-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercise-app
  template:
    metadata:
      labels:
        app: exercise-app
    spec:
      containers:
      - name: exercise-app
        image: niklasmtj/exercise-app:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
