manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exercise-svc
  namespace: exercise-ns
spec:
  type: ClusterIP
  selector:
    app: exercise-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
